hello world fresh deno

--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>deno-dns-over-https-server</title>
+    <title>hello world fresh deno</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon " type="images/x-icon" href="./favicon.ico" />
     <link rel="stylesheet" href="./styles.css" />
